k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pethealthapi
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: pethealthapi
  template:
    metadata:
      labels:
        app: pethealthapi
    spec:
      containers:
      - name: petapi
        image: pethealthapi:v1
        imagePullPolicy: Never 
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
