k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pethealthapi-service
spec:
  type: LoadBalancer
  selector:
    app: pethealthapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
