k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pethealthapi-ingress
spec:
  rules:
    - host: pethealth.api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pethealthapi-service
                port:
                  number: 80
